--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/web,node,emacs,macos,windows
 
 ### Emacs ###
@@ -112,7 +111,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+dist
+.cache
+node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
