--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^1.13.6"
   },
   "dependencies": {
-    "three": "^0.93.0"
+    "three": "^0.93.0",
+    "three-orbitcontrols": "^2.1.2"
   }
 }
